# Account_lifecycle

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_account_session_fields.py  0003_account_browser_identity_fields.py  0004_remove_account_credentials.py  0005_account_profile_sync_fields.py  0006_activity_engine.py  0007_campaign_engine.py  0008_workflow_engine.py  0009_behavior_engine.py  0010_behavior_library.py  0011_account_health.py  0012_recommendation_engine.py  0013_scheduler_engine.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  account.py  activity.py  behavior_template.py  campaign.py  comment.py  enums.py  health.py  post.py  recommendation.py  subreddit.py  sync_job.py
backend/app/providers/: __init__.py  base.py  manager.py
backend/app/reddit/: client.py
backend/app/repositories/: account_repository.py  activity_repository.py  behavior_template_repository.py  campaign_repository.py  health_repository.py  recommendation_repository.py  schedule_repository.py  sync_job_repository.py  workflow_repository.py
backend/app/schemas/: account.py  activity.py  behavior_template.py  campaign.py  health.py  recommendation.py  schedule.py  sync_job.py  workflow.py
backend/app/services/: account_service.py  activity_service.py  behavior_service.py  (+12 more)
docs/: api.md  (+9 more)
(+161 files in other folders)
