[project]
name = "reddit-account-management-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "apscheduler>=3.10.4",
  "asyncpg>=0.29.0",
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "pydantic-settings>=2.3.0",
  "sqlalchemy>=2.0.31",
  "uvicorn[standard]>=0.30.1"
]

[project.optional-dependencies]
dev = ["pytest>=8.2.2", "pytest-asyncio>=0.23.7", "ruff>=0.5.0"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"
